# cpp_template

./: CMakeLists.txt  main.cpp  project.cpp  project.h  project_test.cpp
